@@ -81,6 +81,7 @@
     {#} Double free of TNukeQueueItem (#203)
     {#} !batch looses sites in bnctest output over time (#216)
     {#} !prelist parameter count (#212)
+    {#} Wrong mp3genre detected on IRC announce (#114)
     {^} Requests can be filled from sites without checking the routes. (#168)
     {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
     {^} [MKDIR Denied] msg shows path with denied releasename.
